# ingestor

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  TASKS.md  docker-compose.yaml  main.py  pyproject.toml  tests.py  utils.py
prompts/: parsing_system.j2
