[project]
name = "ingestor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.53",
    "fastapi>=0.119.0",
    "jinja2>=3.1.6",
    "logsim>=0.2.32",
    "orjson>=3.11.3",
    "pillow>=12.0.0",
    "pymupdf>=1.26.5",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.15.1",
    "semchunk>=3.2.3",
    "tiktoken>=0.12.0",
    "uvicorn>=0.37.0",
]
